[gd_scene load_steps=4 format=2]

[ext_resource path="res://Custom Fonts/vcr/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Cenas/UI/Scripts_UI/menumapas.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="menu_mapas" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 52.0
margin_top = 252.0
margin_right = 1227.0
margin_bottom = 467.0
custom_constants/separation = 25
alignment = 1

[node name="btn_mundo1" type="Button" parent="CenterContainer/HBoxContainer"]
margin_right = 215.0
margin_bottom = 215.0
rect_min_size = Vector2( 215, 215 )
custom_fonts/font = SubResource( 1 )
text = "MUNDO 1"
expand_icon = true

[node name="btn_mundo2" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 455.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "MUNDO 2"
expand_icon = true

[node name="btn_mundo3" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 480.0
margin_right = 695.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "MUNDO 3"
expand_icon = true

[node name="btn_mundo4" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 720.0
margin_right = 935.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "MUNDO 4"
expand_icon = true

[node name="btn_mundo5" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 960.0
margin_right = 1175.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "MUNDO 5"
expand_icon = true

[node name="btn_voltarmenu" type="Button" parent="."]
margin_right = 112.0
margin_bottom = 94.0
text = "Voltar"
[connection signal="pressed" from="CenterContainer/HBoxContainer/btn_mundo1" to="." method="_on_btn_mundo1_pressed"]
[connection signal="pressed" from="btn_voltarmenu" to="." method="_on_btn_voltarmenu_pressed"]
